[MODIFIED] disabled LTO/CFI and changed warn frame size  to 5000 bytes.

--- a/arch/arm64/configs/camellia_defconfig
+++ b/arch/arm64/configs/camellia_defconfig
@@ -24,8 +24,8 @@ CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
-CONFIG_CFI_CLANG=y
+CONFIG_LTO_CLANG=n
+CONFIG_CFI_CLANG=n
 # BSP.Charge - 2020.11.14 - enable 18W charging
 CONFIG_MTK_SOFT_HVDCP_2=y
 CONFIG_MODULE_SRCVERSION_ALL=y
@@ -428,7 +428,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
-CONFIG_FRAME_WARN=3600
+CONFIG_FRAME_WARN=5000
 # BSP.System - 2020.10.28 - add hw_info
 CONFIG_HQ_SYSFS_SUPPORT=y
 # CONFIG_PANIC_ON_OOPS is not set
